# withings-mcp-server

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  generate_tokens.py  pyproject.toml
releases/: v1.0.0.md  v1.1.2.md  v1.1.3.md
src/withings_mcp_server/: __init__.py  __main__.py  auth.py  server.py
tests/: __init__.py  test_formatters.py  test_withings.py
